# graze

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  PRODUCT.md  README.md  pyproject.toml
src/graze/: __init__.py  __main__.py
tests/: __init__.py  test_graze.py
