[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.scripts]
graze = "graze.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/graze"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.format]
quote-style = "double"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=graze", "--cov-report=term-missing"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

# Mypy configuration (simple)
[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
disallow_untyped_defs = true
